--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -9,4 +9,9 @@
     margin-right: 20px;
     height: 800px;
     margin-bottom: 10px;
+    overflow-y: scroll
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
 }
