--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -9,7 +9,9 @@
     margin-right: 20px;
     height: 800px;
     margin-bottom: 10px;
-    overflow-y: scroll
+    overflow-y: scroll;
+    box-shadow: 0 25px 37px 0 rgba(0,0,0,0.2), 0 20px 20px 0 rgba(0,0,0,0.19);
+    border: solid 1px;
 }
 ::-webkit-scrollbar {
     width: 0px;
