--- a/client/src/components/Task/Task.css
+++ b/client/src/components/Task/Task.css
@@ -1,7 +1,7 @@
 .task-summary .card-content {
     padding: 10px;
     box-shadow: 0 8px 17px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
-    cursor: pointer;
+    cursor: all-scroll;
     -webkit-user-select: none; /* Safari */        
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
@@ -11,3 +11,7 @@
     margin-bottom: 12px !important;
 }
 
+.task-summary .details{
+    margin: 0px !important;
+    cursor: pointer;
+}
